--- a/.github/workflows/ReleaseAWSS3.yml
+++ b/.github/workflows/ReleaseAWSS3.yml
@@ -20,8 +20,8 @@ jobs:
           node-version: '18.x'
 
       - name: Install Dependencies
-        working-directory: ./darc-docs
-        run: |
+        hyb19890318@gmail.com
+        heyubi888888
           npm install
 
       - name: Build
